# TcpClientServer

./: CMakeLists.txt  client.cpp  connection.hpp  server.cpp
models/: tcp_request.hpp  tcp_response.hpp
